[tool.poetry]
name = "python-leetcode"
version = "0.1.0"
description = "Solution to leetcode problems in python"
authors = ["apella1 <johncollons5@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ruff = "^0.1.5"
black = "^23.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
