[tool.poetry]
name = "python-leetcode"
version = "0.1.0"
description = "Solution to LeetCode problems in python"
authors = ["apella1 <johncollons5@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
ruff = "^0.11.2"
black = "^25.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
